--- a/_modules/TermTk/TTkWidgets/widget.html
+++ b/_modules/TermTk/TTkWidgets/widget.html
@@ -194,8 +194,6 @@
 <span class="c1"># OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE</span>
 <span class="c1"># SOFTWARE.</span>
 
-<span class="kn">import</span> <span class="nn">time</span>
-
 <span class="kn">from</span> <span class="nn">TermTk.TTkCore.cfg</span>       <span class="kn">import</span> <span class="n">TTkCfg</span><span class="p">,</span> <span class="n">TTkGlbl</span>
 <span class="kn">from</span> <span class="nn">TermTk.TTkCore.constant</span>  <span class="kn">import</span> <span class="n">TTkK</span>
 <span class="kn">from</span> <span class="nn">TermTk.TTkCore.log</span>       <span class="kn">import</span> <span class="n">TTkLog</span>
@@ -227,7 +225,7 @@
 
 <span class="sd">    The TTkWidget class is the base class of all user interface objects</span>
 
-<span class="sd">    :param str name: the name of the widget, defaults to &quot;&quot;</span>
+<span class="sd">    :param name: the name of the widget, defaults to &quot;&quot;</span>
 <span class="sd">    :type name: str, optional</span>
 <span class="sd">    :param parent: the parent widget, defaults to None</span>
 <span class="sd">    :type parent: :class:`TTkWidget`, optional</span>
