--- a/_modules/index.html
+++ b/_modules/index.html
@@ -174,6 +174,7 @@
 <li><a href="TermTk/TTkCore/color.html">TermTk.TTkCore.color</a></li>
 <li><a href="TermTk/TTkCore/constant.html">TermTk.TTkCore.constant</a></li>
 <li><a href="TermTk/TTkCore/signal.html">TermTk.TTkCore.signal</a></li>
+<li><a href="TermTk/TTkCore/string.html">TermTk.TTkCore.string</a></li>
 <li><a href="TermTk/TTkCore/timer.html">TermTk.TTkCore.timer</a></li>
 <li><a href="TermTk/TTkCore/ttk.html">TermTk.TTkCore.ttk</a></li>
 <li><a href="TermTk/TTkGui/draw_utf8.html">TermTk.TTkGui.draw_utf8</a></li>
