--- a/genindex.html
+++ b/genindex.html
@@ -215,6 +215,10 @@
 </li>
       </ul></li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.align">align() (TTkString method)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="B">B</h2>
@@ -310,6 +314,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.findall">findall() (TTkString method)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.folderIconColor">folderIconColor (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.folderNameColor">folderNameColor (TTkTheme attribute)</a>
@@ -343,6 +349,10 @@
 
 <h2 id="J">J</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.join">join() (TTkString method)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.Alignment.JUSTIFY">JUSTIFY (TTkConstant.Alignment attribute)</a>
 </li>
@@ -613,9 +623,11 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkModelView.treewidget.html#TermTk.TTkWidgets.TTkModelView.treewidget.TTkTreeWidget.mouseDoubleClickEvent">(TTkTreeWidget method)</a>
 </li>
       </ul></li>
-      <li><a href="autogen.TermTk/TermTk.TTkWidgets.resizableframe.html#TermTk.TTkWidgets.resizableframe.TTkResizableFrame.mouseDragEvent">mouseDragEvent() (TTkResizableFrame method)</a>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.lineedit.html#TermTk.TTkWidgets.lineedit.TTkLineEdit.mouseDragEvent">mouseDragEvent() (TTkLineEdit method)</a>
 
       <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.resizableframe.html#TermTk.TTkWidgets.resizableframe.TTkResizableFrame.mouseDragEvent">(TTkResizableFrame method)</a>
+</li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.scrollbar.html#TermTk.TTkWidgets.scrollbar.TTkScrollBar.mouseDragEvent">(TTkScrollBar method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.spinbox.html#TermTk.TTkWidgets.spinbox.TTkSpinBox.mouseDragEvent">(TTkSpinBox method)</a>
@@ -769,6 +781,8 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.widget.html#TermTk.TTkWidgets.widget.TTkWidget.removeWidget">removeWidget() (TTkWidget method)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.replace">replace() (TTkString method)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.canvas.html#TermTk.TTkCore.canvas.TTkCanvas.resize">resize() (TTkCanvas method)</a>
 
       <ul>
@@ -805,6 +819,10 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.search">search() (TTkString method)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.setColor">setColor() (TTkString method)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.widget.html#TermTk.TTkWidgets.widget.TTkWidget.setGeometry">setGeometry() (TTkWidget method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.widget.html#TermTk.TTkWidgets.widget.TTkWidget.setPadding">setPadding() (TTkWidget method)</a>
@@ -815,9 +833,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkModelView.treewidget.html#TermTk.TTkWidgets.TTkModelView.treewidget.TTkTreeWidget.sortItems">sortItems() (TTkTreeWidget method)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.split">split() (TTkString method)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.timer.html#TermTk.TTkCore.timer.TTkTimer.start">start() (TTkTimer method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.color.html#TermTk.TTkCore.color.TTkColor.STRIKETROUGH">STRIKETROUGH (TTkColor attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.substring">substring() (TTkString method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1468,6 +1490,10 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.window.html#module-TermTk.TTkWidgets.window">module</a>
 </li>
       </ul></li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.toAansi">toAansi() (TTkString method)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.toAscii">toAscii() (TTkString method)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.treeHeaderColor">treeHeaderColor (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.treeLineColor">treeLineColor (TTkTheme attribute)</a>
@@ -1563,6 +1589,8 @@
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.spinbox.html#TermTk.TTkWidgets.spinbox.TTkSpinBox">TTkSpinBox (class in TermTk.TTkWidgets.spinbox)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter">TTkSplitter (class in TermTk.TTkWidgets.splitter)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString">TTkString (class in TermTk.TTkCore.string)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabWidget">TTkTabWidget (class in TermTk.TTkWidgets.tabwidget)</a>
 </li>
