--- a/_modules/TermTk/TTkWidgets/lineedit.html
+++ b/_modules/TermTk/TTkWidgets/lineedit.html
@@ -249,8 +249,7 @@
     <span class="k">def</span> <span class="nf">_pushCursor</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">w</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">width</span><span class="p">()</span>
 
-        <span class="bp">self</span><span class="o">.</span><span class="n">_selectionFrom</span> <span class="o">=</span> <span class="mi">0</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_selectionTo</span>   <span class="o">=</span> <span class="mi">0</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_selectionTo</span>   <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_selectionFrom</span>
 
         <span class="c1"># Align the text and the offset and the cursor to the current view</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_offset</span> <span class="o">=</span> <span class="nb">max</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="nb">min</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_offset</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_text</span><span class="p">)</span><span class="o">-</span><span class="n">w</span><span class="p">))</span>
@@ -286,14 +285,26 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_canvas</span><span class="o">.</span><span class="n">drawText</span><span class="p">(</span><span class="n">pos</span><span class="o">=</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">),</span> <span class="n">text</span><span class="o">=</span><span class="n">text</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="n">color</span><span class="p">,</span> <span class="n">width</span><span class="o">=</span><span class="n">w</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="TTkLineEdit.mousePressEvent"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkWidgets.lineedit.html#TermTk.TTkWidgets.lineedit.TTkLineEdit.mousePressEvent">[docs]</a>    <span class="k">def</span> <span class="nf">mousePressEvent</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">evt</span><span class="p">):</span>
-        <span class="n">x</span><span class="p">,</span><span class="n">y</span> <span class="o">=</span> <span class="n">evt</span><span class="o">.</span><span class="n">x</span><span class="p">,</span> <span class="n">evt</span><span class="o">.</span><span class="n">y</span>
-        <span class="n">txtPos</span> <span class="o">=</span> <span class="n">x</span><span class="o">+</span><span class="bp">self</span><span class="o">.</span><span class="n">_offset</span>
+        <span class="n">txtPos</span> <span class="o">=</span> <span class="n">evt</span><span class="o">.</span><span class="n">x</span><span class="o">+</span><span class="bp">self</span><span class="o">.</span><span class="n">_offset</span>
         <span class="k">if</span> <span class="n">txtPos</span> <span class="o">&gt;</span> <span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_text</span><span class="p">):</span>
             <span class="n">txtPos</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_text</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_cursorPos</span> <span class="o">=</span> <span class="n">txtPos</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_selectionFrom</span> <span class="o">=</span> <span class="mi">0</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_selectionTo</span>   <span class="o">=</span> <span class="mi">0</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_cursorPos</span>     <span class="o">=</span> <span class="n">txtPos</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_selectionFrom</span> <span class="o">=</span> <span class="n">txtPos</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_selectionTo</span>   <span class="o">=</span> <span class="n">txtPos</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_pushCursor</span><span class="p">()</span>
+        <span class="k">return</span> <span class="kc">True</span></div>
+
+<div class="viewcode-block" id="TTkLineEdit.mouseDragEvent"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkWidgets.lineedit.html#TermTk.TTkWidgets.lineedit.TTkLineEdit.mouseDragEvent">[docs]</a>    <span class="k">def</span> <span class="nf">mouseDragEvent</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">evt</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
+        <span class="n">txtPos</span> <span class="o">=</span> <span class="n">evt</span><span class="o">.</span><span class="n">x</span><span class="o">+</span><span class="bp">self</span><span class="o">.</span><span class="n">_offset</span>
+        <span class="k">if</span> <span class="n">txtPos</span> <span class="o">&lt;</span> <span class="bp">self</span><span class="o">.</span><span class="n">_cursorPos</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_selectionFrom</span> <span class="o">=</span> <span class="n">txtPos</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_selectionTo</span>   <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_cursorPos</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_selectionFrom</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_cursorPos</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_selectionTo</span>   <span class="o">=</span> <span class="n">txtPos</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_selectionFrom</span> <span class="o">&lt;</span> <span class="bp">self</span><span class="o">.</span><span class="n">_selectionTo</span><span class="p">:</span>
+            <span class="n">TTkHelper</span><span class="o">.</span><span class="n">hideCursor</span><span class="p">()</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">update</span><span class="p">()</span>
         <span class="k">return</span> <span class="kc">True</span></div>
 
 <div class="viewcode-block" id="TTkLineEdit.mouseDoubleClickEvent"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkWidgets.lineedit.html#TermTk.TTkWidgets.lineedit.TTkLineEdit.mouseDoubleClickEvent">[docs]</a>    <span class="k">def</span> <span class="nf">mouseDoubleClickEvent</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">evt</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
