--- a/_modules/TermTk/TTkCore/constant.html
+++ b/_modules/TermTk/TTkCore/constant.html
@@ -258,10 +258,17 @@
     <span class="n">ScrollBarAlwaysOff</span> <span class="o">=</span> <span class="n">ScrollBarPolicy</span><span class="o">.</span><span class="n">ScrollBarAlwaysOff</span>
     <span class="n">ScrollBarAlwaysOn</span>  <span class="o">=</span> <span class="n">ScrollBarPolicy</span><span class="o">.</span><span class="n">ScrollBarAlwaysOn</span>
 
-    <span class="k">class</span> <span class="nc">CheckState</span><span class="p">:</span>
+<div class="viewcode-block" id="TTkConstant.CheckState"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.CheckState">[docs]</a>    <span class="k">class</span> <span class="nc">CheckState</span><span class="p">:</span>
+        <span class="sd">&#39;&#39;&#39; This class type is used to describe the check status.</span>
+
+<span class="sd">        .. autosummary::</span>
+<span class="sd">          Unchecked</span>
+<span class="sd">          PartiallyChecked</span>
+<span class="sd">          Checked</span>
+<span class="sd">        &#39;&#39;&#39;</span>
         <span class="n">Unchecked</span>        <span class="o">=</span> <span class="mh">0x00</span>
         <span class="n">PartiallyChecked</span> <span class="o">=</span> <span class="mh">0x01</span>
-        <span class="n">Checked</span>          <span class="o">=</span> <span class="mh">0x02</span>
+        <span class="n">Checked</span>          <span class="o">=</span> <span class="mh">0x02</span></div>
 
     <span class="n">Unchecked</span>        <span class="o">=</span> <span class="n">CheckState</span><span class="o">.</span><span class="n">Unchecked</span>
     <span class="n">PartiallyChecked</span> <span class="o">=</span> <span class="n">CheckState</span><span class="o">.</span><span class="n">PartiallyChecked</span>
