--- a/genindex.html
+++ b/genindex.html
@@ -270,11 +270,15 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxContentColorFocus">checkboxContentColorFocus (TTkTheme attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxTextColor">checkboxTextColor (TTkTheme attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.checkboxTextColorFocus">checkboxTextColorFocus (TTkTheme attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.checkState">checkState() (TTkCheckbox method)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.clicked">clicked() (TTkCheckbox method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.comboboxBorderColor">comboboxBorderColor (TTkTheme attribute)</a>
 </li>
@@ -821,6 +825,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.search">search() (TTkString method)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.setCheckState">setCheckState() (TTkCheckbox method)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.setColor">setColor() (TTkString method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.widget.html#TermTk.TTkWidgets.widget.TTkWidget.setGeometry">setGeometry() (TTkWidget method)</a>
@@ -836,6 +842,8 @@
       <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.split">split() (TTkString method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.timer.html#TermTk.TTkCore.timer.TTkTimer.start">start() (TTkTimer method)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.checkbox.html#TermTk.TTkWidgets.checkbox.TTkCheckbox.stateChanged">stateChanged() (TTkCheckbox method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.color.html#TermTk.TTkCore.color.TTkColor.STRIKETROUGH">STRIKETROUGH (TTkColor attribute)</a>
 </li>
@@ -1271,8 +1279,6 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.Fancy.treewidget.html#module-TermTk.TTkWidgets.Fancy.treewidget">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     TermTk.TTkWidgets.Fancy.treewidgetitem
 
@@ -1280,6 +1286,8 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.Fancy.treewidgetitem.html#module-TermTk.TTkWidgets.Fancy.treewidgetitem">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     TermTk.TTkWidgets.frame
 
@@ -1527,6 +1535,8 @@
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant">TTkConstant (class in TermTk.TTkCore.constant)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.Alignment">TTkConstant.Alignment (class in TermTk.TTkCore.constant)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.CheckState">TTkConstant.CheckState (class in TermTk.TTkCore.constant)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.LayoutItemTypes">TTkConstant.LayoutItemTypes (class in TermTk.TTkCore.constant)</a>
 </li>
