--- a/_modules/TermTk/TTkWidgets/checkbox.html
+++ b/_modules/TermTk/TTkWidgets/checkbox.html
@@ -219,9 +219,9 @@
 <span class="sd">    :param bool checked: Checked status, defaults to &quot;False&quot;</span>
 <span class="sd">    :type checked: bool, optional</span>
 
-<span class="sd">    **Signals**</span>
-
-<span class="sd">    Signals:</span>
+<span class="sd">    +-----------------------------------------------------------------------------------------------+</span>
+<span class="sd">    | `Signals &lt;https://ceccopierangiolieugenio.github.io/pyTermTk/tutorial/003-signalslots.html&gt;`_ |</span>
+<span class="sd">    +-----------------------------------------------------------------------------------------------+</span>
 
 <span class="sd">        .. py:method:: clicked(checked)</span>
 <span class="sd">            :signal:</span>
@@ -239,9 +239,7 @@
 <span class="sd">            :param state: state of the checkbox</span>
 <span class="sd">            :type state: :class:`~TermTk.TTkCore.constant.TTkConstant.CheckState`</span>
 
-<span class="sd">    ..</span>
-
-<span class="sd">    &#39;&#39;&#39;</span>
+<span class="sd">     &#39;&#39;&#39;</span>
     <span class="vm">__slots__</span> <span class="o">=</span> <span class="p">(</span>
         <span class="s1">&#39;_checked&#39;</span><span class="p">,</span> <span class="s1">&#39;_text&#39;</span><span class="p">,</span>
         <span class="c1"># Signals</span>
